# MakeRzhakaGreatAgain

./: CMakeLists.txt  main.cpp  widget.cpp  widget.h
backend/: .gitignore  CMakeLists.txt  dummy_parser.y  dummy_scanner.l  exit.txt  main.cpp  rrt.txt  rt.field  rt.txt  rt2.txt  rt3.txt  scanner.h  zhopa.txt
backend/ast/: CMakeLists.txt  ast.cpp  ast.h  bases.h  genericType.h
backend/examples/: elund.txt  input.txt  load_store.txt  rec_input.txt  test_look.txt  true_rec.txt  while.txt
backend/runtime/: CMakeLists.txt  runtime.cpp  runtime.h
listener/: CMakeLists.txt  listener.cpp  listener.hpp
